fix: Layout bugs in information pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -880,13 +880,17 @@ input[placeholder],
 
 .information-hero {
     min-width: 100%;
-    height: 100%;
     z-index: -1;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #ffffff;
-    padding-top: 100px;
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 145px;
+    /* height of the footer */
 }
 
 .information-title {
@@ -912,6 +916,9 @@ input[placeholder],
     .accordion-container {
         padding-bottom: 70px;
     }
+    .information-hero {
+        padding-bottom: 200px;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -925,13 +932,6 @@ input[placeholder],
     .accordion-container {
         max-width: 90%;
         margin-bottom: 40px;
-    }
-}
-
-
-@media screen and (max-width: 790px) {
-    .information-hero {
-        height: 500px;
     }
 }
 
